--- a/variants/v1.5.3153.0-bf2all64-bf2stats-3.1.2/Dockerfile
+++ b/variants/v1.5.3153.0-bf2all64-bf2stats-3.1.2/Dockerfile
@@ -27,10 +27,11 @@ RUN unzip bf2all64_v1.0_setup.zip -d extract
 RUN rm -rf /server/bf2/mods/bf2all64
 RUN mv extract/bf2all64 /server/bf2/mods
 
-# Install bf2stats 3
+# Install bf2stats 3.1.2
 WORKDIR /root
 RUN export DEBIAN_FRONTEND=noninteractive && apt-get update && apt-get install -y unzip
 RUN curl -sSLO https://github.com/startersclan/StatsPython/archive/refs/tags/3.1.2.zip
+RUN echo "21958c614ce880f63cd4c5a9db366ccacf68674cd89f50bbf95d9aa2d9bca878  3.1.2.zip" | sha256sum -c -
 RUN sha256sum 3.1.2.zip | grep '^21958c614ce880f63cd4c5a9db366ccacf68674cd89f50bbf95d9aa2d9bca878 '
 RUN unzip 3.1.2.zip -d extract
 RUN cp -r extract/*/. /server/bf2/python/bf2/
