--- a/variants/v1.5.3153.0-bf2stats-3.1.2/Dockerfile
+++ b/variants/v1.5.3153.0-bf2stats-3.1.2/Dockerfile
@@ -18,10 +18,11 @@ RUN mkdir -p /server
 RUN cat /install/license.sh | sed 's/^more/cat/' > /install/license-fixed.sh # Show the licenses without a pager
 RUN cd /install && printf '\naccept\n\nyes\n/server\ny\n' | sh /install/license-fixed.sh # Agree to licenses
 
-# Install bf2stats 3
+# Install bf2stats 3.1.2
 WORKDIR /root
 RUN export DEBIAN_FRONTEND=noninteractive && apt-get update && apt-get install -y unzip
 RUN curl -sSLO https://github.com/startersclan/StatsPython/archive/refs/tags/3.1.2.zip
+RUN echo "21958c614ce880f63cd4c5a9db366ccacf68674cd89f50bbf95d9aa2d9bca878  3.1.2.zip" | sha256sum -c -
 RUN sha256sum 3.1.2.zip | grep '^21958c614ce880f63cd4c5a9db366ccacf68674cd89f50bbf95d9aa2d9bca878 '
 RUN unzip 3.1.2.zip -d extract
 RUN cp -r extract/*/. /server/bf2/python/bf2/
