--- a/docs/examples/v1.5-with-delete-udp-conntrack/docker-compose.yml
+++ b/docs/examples/v1.5-with-delete-udp-conntrack/docker-compose.yml
@@ -25,7 +25,7 @@ services:
               sleep 10
           done
 
-  # This is the official BF2 1.5 dedicated server. It does not work unless DNS spoofing is added.
+  # This is the official BF2 1.5 dedicated server.
   bf2:
     image: startersclan/docker-bf2:v1.5.3153.0
     volumes:
