--- a/docs/examples/v1.5-bf2all64/docker-compose.yml
+++ b/docs/examples/v1.5-bf2all64/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2.2'
 services:
-  # This is the official BF2 1.5 dedicated server with the BF2All64 mod.
+  # This is the official BF2 1.5 dedicated server running the BF2All64 mod.
   bf2:
     image: startersclan/docker-bf2:v1.5.3153.0-bf2all64
     volumes:
@@ -13,18 +13,6 @@ services:
     ports:
       - 16567:16567/udp
       - 29900:29900/udp
-    extra_hosts:
-      - battlefield2.available.gamespy.com:192.168.1.100 # Your master server IP
-      - battlefield2.master.gamespy.com:192.168.1.100 # Your master server IP
-      - battlefield2.ms14.gamespy.com:192.168.1.100 # Your master server IP
-      - master.gamespy.com:192.168.1.100 # Your master server IP
-      - motd.gamespy.com:192.168.1.100 # Your master server IP
-      - gpsp.gamespy.com:192.168.1.100 # Your master server IP
-      - gpcm.gamespy.com:192.168.1.100 # Your master server IP
-      - gamespy.com:192.168.1.100 # Your master server IP
-      - bf2web.gamespy.com:192.168.1.100 # Your ASP web server IP
-      - gamestats.gamespy.com:192.168.1.100 # Your ASP web server IP
-      - eapusher.dice.se:192.168.1.100 # Your ASP web server IP
     networks:
       - default
     healthcheck:
