--- a/docs/examples/v1.5/docker-compose.yml
+++ b/docs/examples/v1.5/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2.2'
 services:
-  # This is the official BF2 1.5 dedicated server. It does not work unless DNS spoofing is added.
+  # This is the official BF2 1.5 dedicated server.
   bf2:
     image: startersclan/docker-bf2:v1.5.3153.0
     volumes:
