Fix: Add `aibehaviours.ai` `LookAtWrapper` fix for vanilla BF2 and `bf2all64` to prevent bots causing server to crash
Vanilla BF2, and the `bf2all64` mod may experience random server crashes when playing with bots, E.g. when a bot is parashooting while trying to shoot an enemy. `bf2all64`'s `aibehaviour.ai` only includes some fixes for `LookAtWrapper`, when compared to the vanilla BF2's `aibehaviour.ai`.

A better version of `aibehaviors.ai` with the LookAtWrapper fix is taken from the BF2 community-contributed BF2 SPX 1.2, specifically `BF2_SPX_1_2.zip`. This `aibehaviour.ai` is now added in the vanilla and the `bf2all64` variants, with the original file renamed to `aibehaviour.ai.original`.		trimtrimtrim
trimtrim

--- a/variants/v1.5.3153.0-bf2all64-bf2stats-2.5.1/Dockerfile
+++ b/variants/v1.5.3153.0-bf2all64-bf2stats-2.5.1/Dockerfile
@@ -18,6 +18,7 @@ RUN export DEBIAN_FRONTEND=noninteractive; \
 
 # Install Battlefield 2 server
 WORKDIR /root
+COPY aibehaviours-fixlookatwrapper.ai /aibehaviours-fixlookatwrapper.ai
 RUN set -eux; \
     curl -sSLO https://files.startersclan.com/ea/bf2/bf2-linuxded-1.5.3153.0-installer.tgz; \
     sha256sum bf2-linuxded-1.5.3153.0-installer.tgz | grep "^4d849218c1725e7bd6a7e7f164e27b036248f8ded2e30340dd0722c1dfffbab6 "; \
@@ -33,17 +34,28 @@ RUN set -eux; \
     # Agree to licenses
     printf '\naccept\n\nyes\n/server\ny\n' | sh /install/license-fixed.sh; \
     find /server; \
-    rm -rf /install;
+    rm -rf /install; \
+    # Apply the LookAtWrapper fix to prevent crashes when playing with bots
+    mv -v /server/bf2/mods/bf2/ai/aibehaviours.ai /server/bf2/mods/bf2/ai/aibehaviours.ai.original; \
+    cp -v /aibehaviours-fixlookatwrapper.ai /server/bf2/mods/bf2/ai/aibehaviours.ai; \
+    mv -v /server/bf2/mods/xpack/ai/aibehaviours.ai /server/bf2/mods/xpack/ai/aibehaviours.ai.original; \
+    cp -v /aibehaviours-fixlookatwrapper.ai /server/bf2/mods/xpack/ai/aibehaviours.ai; \
+    rm -v /aibehaviours-fixlookatwrapper.ai
 
 # Install bf2all64 mod
 WORKDIR /root
+COPY aibehaviours-fixlookatwrapper.ai /aibehaviours-fixlookatwrapper.ai
 RUN set -eux; \
     curl -sSLO https://files.startersclan.com/ea/bf2/bf2all64_v1.0_setup.zip; \
     sha256sum bf2all64_v1.0_setup.zip | grep '^4ee82d91043c4afbf1bed50787cbf98af124bd7e6c608cdb0f5115c7761024f1 '; \
     unzip bf2all64_v1.0_setup.zip -d extract; \
     rm -rf /server/bf2/mods/bf2all64; \
     mv extract/bf2all64 /server/bf2/mods; \
-    rm -fv bf2all64_v1.0_setup.zip;
+    rm -fv bf2all64_v1.0_setup.zip; \
+    # Apply the LookAtWrapper fix to prevent crashes when playing with bots
+    mv -v /server/bf2/mods/bf2all64/ai/aibehaviours.ai /server/bf2/mods/bf2all64/ai/aibehaviours.ai.original; \
+    cp -v /aibehaviours-fixlookatwrapper.ai /server/bf2/mods/bf2all64/ai/aibehaviours.ai; \
+    rm -v /aibehaviours-fixlookatwrapper.ai
 
 # Install bf2stats 2.5.1
 WORKDIR /root
