Enhancement (ci): Add `change` label to `release-drafter.yml`

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,14 +1,14 @@
-name-template: '$RESOLVED_VERSION  🌈'
-tag-template: '$RESOLVED_VERSION'
+name-template: 'v$RESOLVED_VERSION 🌈'
+tag-template: 'v$RESOLVED_VERSION'
 categories:
   - title: '🚀 Features'
     labels:
       - 'feature'
       - 'enhancement'
+      - 'change'
   - title: '🐛 Bug Fixes'
     labels:
       - 'fix'
-      - 'bugfix'
       - 'bug'
   - title: '🖊️ Refactors'
     labels:
@@ -26,23 +26,21 @@ change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 version-resolver:
   major:
     labels:
-      # - 'major'
       - 'breaking'
   minor:
     labels:
-      # - 'minor'
       - 'feature'
       - 'enhancement'
+      - 'change'
       - 'refactor'
   patch:
     labels:
-      # - 'patch'
       - 'fix'
-      - 'bugfix'
       - 'bug'
       - 'style'
       - 'docs'
       - 'documentation'
+      - 'chore'
   default: patch
 sort-by: title
 template: |
