--- a/.github/workflows/ci-master-pr.yml
+++ b/.github/workflows/ci-master-pr.yml
@@ -616,6 +616,73 @@ jobs:
 
     # This step generates the docker tags
     - name: Prepare
+      id: prep-v1-5-3153-0-bf2all64-bf2stats-2-7-0
+      run: |
+        set -e
+
+        # Get ref, i.e. <branch_name> from refs/heads/<branch_name>, or <tag-name> from refs/tags/<tag_name>. E.g. 'master' or 'v0.0.0'
+        REF=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+
+        # Get short commit hash E.g. 'abc0123'
+        SHA=$( echo "${GITHUB_SHA}" | cut -c1-7 )
+
+        # Generate docker image tags
+        # E.g. 'v0.0.0-<variant>' and 'v0.0.0-abc0123-<variant>'
+        # E.g. 'master-<variant>' and 'master-abc0123-<variant>'
+        VARIANT="v1.5.3153.0-bf2all64-bf2stats-2.7.0"
+        REF_VARIANT="${REF}-${VARIANT}"
+        REF_SHA_VARIANT="${REF}-${SHA}-${VARIANT}"
+
+        # Pass variables to next step
+        echo "VARIANT_BUILD_DIR=$VARIANT_BUILD_DIR" >> $GITHUB_OUTPUT
+        echo "VARIANT=$VARIANT" >> $GITHUB_OUTPUT
+        echo "REF_VARIANT=$REF_VARIANT" >> $GITHUB_OUTPUT
+        echo "REF_SHA_VARIANT=$REF_SHA_VARIANT" >> $GITHUB_OUTPUT
+
+    - name: v1.5.3153.0-bf2all64-bf2stats-2.7.0 - Build (PRs)
+      # Run only on pull requests
+      if: github.event_name == 'pull_request'
+      uses: docker/build-push-action@v3
+      with:
+        context: variants/v1.5.3153.0-bf2all64-bf2stats-2.7.0
+        platforms: linux/386,linux/amd64
+        push: false
+        tags: |
+          ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2all64-bf2stats-2-7-0.outputs.REF_VARIANT }}
+          ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2all64-bf2stats-2-7-0.outputs.REF_SHA_VARIANT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+    - name: v1.5.3153.0-bf2all64-bf2stats-2.7.0 - Build and push (master)
+      # Run only on master
+      if: github.ref == 'refs/heads/master'
+      uses: docker/build-push-action@v3
+      with:
+        context: variants/v1.5.3153.0-bf2all64-bf2stats-2.7.0
+        platforms: linux/386,linux/amd64
+        push: true
+        tags: |
+          ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2all64-bf2stats-2-7-0.outputs.REF_VARIANT }}
+          ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2all64-bf2stats-2-7-0.outputs.REF_SHA_VARIANT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+    - name: v1.5.3153.0-bf2all64-bf2stats-2.7.0 - Build and push (release)
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: docker/build-push-action@v3
+      with:
+        context: variants/v1.5.3153.0-bf2all64-bf2stats-2.7.0
+        platforms: linux/386,linux/amd64
+        push: true
+        tags: |
+          ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2all64-bf2stats-2-7-0.outputs.VARIANT }}
+          ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2all64-bf2stats-2-7-0.outputs.REF_VARIANT }}
+          ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2all64-bf2stats-2-7-0.outputs.REF_SHA_VARIANT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+    # This step generates the docker tags
+    - name: Prepare
       id: prep-v1-5-3153-0-bf2all64-bf2stats-3-1-0
       run: |
         set -e
@@ -1281,6 +1348,73 @@ jobs:
           ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2stats-2-6-0.outputs.VARIANT }}
           ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2stats-2-6-0.outputs.REF_VARIANT }}
           ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2stats-2-6-0.outputs.REF_SHA_VARIANT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+    # This step generates the docker tags
+    - name: Prepare
+      id: prep-v1-5-3153-0-bf2stats-2-7-0
+      run: |
+        set -e
+
+        # Get ref, i.e. <branch_name> from refs/heads/<branch_name>, or <tag-name> from refs/tags/<tag_name>. E.g. 'master' or 'v0.0.0'
+        REF=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+
+        # Get short commit hash E.g. 'abc0123'
+        SHA=$( echo "${GITHUB_SHA}" | cut -c1-7 )
+
+        # Generate docker image tags
+        # E.g. 'v0.0.0-<variant>' and 'v0.0.0-abc0123-<variant>'
+        # E.g. 'master-<variant>' and 'master-abc0123-<variant>'
+        VARIANT="v1.5.3153.0-bf2stats-2.7.0"
+        REF_VARIANT="${REF}-${VARIANT}"
+        REF_SHA_VARIANT="${REF}-${SHA}-${VARIANT}"
+
+        # Pass variables to next step
+        echo "VARIANT_BUILD_DIR=$VARIANT_BUILD_DIR" >> $GITHUB_OUTPUT
+        echo "VARIANT=$VARIANT" >> $GITHUB_OUTPUT
+        echo "REF_VARIANT=$REF_VARIANT" >> $GITHUB_OUTPUT
+        echo "REF_SHA_VARIANT=$REF_SHA_VARIANT" >> $GITHUB_OUTPUT
+
+    - name: v1.5.3153.0-bf2stats-2.7.0 - Build (PRs)
+      # Run only on pull requests
+      if: github.event_name == 'pull_request'
+      uses: docker/build-push-action@v3
+      with:
+        context: variants/v1.5.3153.0-bf2stats-2.7.0
+        platforms: linux/386,linux/amd64
+        push: false
+        tags: |
+          ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2stats-2-7-0.outputs.REF_VARIANT }}
+          ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2stats-2-7-0.outputs.REF_SHA_VARIANT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+    - name: v1.5.3153.0-bf2stats-2.7.0 - Build and push (master)
+      # Run only on master
+      if: github.ref == 'refs/heads/master'
+      uses: docker/build-push-action@v3
+      with:
+        context: variants/v1.5.3153.0-bf2stats-2.7.0
+        platforms: linux/386,linux/amd64
+        push: true
+        tags: |
+          ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2stats-2-7-0.outputs.REF_VARIANT }}
+          ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2stats-2-7-0.outputs.REF_SHA_VARIANT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+    - name: v1.5.3153.0-bf2stats-2.7.0 - Build and push (release)
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: docker/build-push-action@v3
+      with:
+        context: variants/v1.5.3153.0-bf2stats-2.7.0
+        platforms: linux/386,linux/amd64
+        push: true
+        tags: |
+          ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2stats-2-7-0.outputs.VARIANT }}
+          ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2stats-2-7-0.outputs.REF_VARIANT }}
+          ${{ github.repository }}:${{ steps.prep-v1-5-3153-0-bf2stats-2-7-0.outputs.REF_SHA_VARIANT }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
