Refactor: Install mods using`.tar.gz` instead of `.zip`

--- a/variants/v1.5.3153.0-bf2all64-bf2stats-2.2.0/Dockerfile
+++ b/variants/v1.5.3153.0-bf2all64-bf2stats-2.2.0/Dockerfile
@@ -58,6 +58,7 @@ RUN set -eux; \
     rm -v /aibehaviours-fixlookatwrapper.ai
 
 # Install bf2stats 2.2.0
+# See: https://code.google.com/archive/p/bf2stats/
 WORKDIR /root
 RUN set -eux; \
     # I know, it is mispelled
